--- a/criar-login.html
+++ b/criar-login.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Girassol Mini Mercado - Produtos frescos e orgânicos ao seu alcance">
     <meta name="keywords" content="mini mercado, alimentos frescos, orgânicos, vegetais, frutas, compras online">
     <meta name="author" content="Girassol Mini Mercado">
-    <title>Girassol Mini Mercado</title>
+    <title>Criar Login - Girassol Mini Mercado</title>
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="criar-login.css">
 </head>
 <body>
     <header class="header">
@@ -25,13 +25,14 @@
 
     <main>
         <div class="login-container">
-            <h1>Insira seus dados</h1>
+            <h1>Criar Login</h1>
             <form>
-                <input type="email" placeholder="Usuario@dominio.com" required>
-                <input type="password" placeholder="Sua senha" required>
-                <button type="submit" class="login-btn">Entrar</button>
+                <input type="text" placeholder="Nome" required>
+                <input type="email" placeholder="E-mail" required>
+                <input type="password" placeholder="Senha" required>
+                <input type="tel" placeholder="Telefone" required>
+                <button type="submit" class="submit-btn">Salvar</button>
             </form>
-            <a href="criar-login.html" class="create-login">Criar Login</a>
         </div>
     </main>
 
