--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                 <input type="text" placeholder="Pesquisar...">
                 <button><img src="img/search-icon.png" alt="Buscar"></button>
             </div>
+            <div class="header-buttons">
+                <a href="promocoes.html"><button class="header-btn">Promoções</button></a>
+                <a href="novidades.html"><button class="header-btn">Novidades</button></a>
+            </div>
             <div class="user-login">
-                <button id="loginButton">Entrar</button>
+                <button id="loginButton" class="header-btn">Entrar</button>
                 <button><img src="img/login-icon.png" alt="Buscar"></button>
             </div>
         </div>
