--- a/novidades.html
+++ b/novidades.html
@@ -20,69 +20,73 @@
                 <span class="logo-text">Mini Mercado<br><strong>Girassol</strong></span>
             </div>
             <div class="header-links">
-                <a href="#">Novidades</a>
+                <a href="promocoes.html">Promoções</a>
                 <a href="#">Contato</a>
-                <a href="#" class="categories">Todas Categorias</a>
+                <a href="index.html" class="categories">Todas Categorias</a>
             </div>
         </div>
     </header>
 
+    <div class="container center-content">
+        <h1 class="centered-text">Novidades Fresquinhas</h1>
+    </div>    
+
     <div class="container">
-        <h1>Novidades Fresquinhas</h1>
         <div class="novelties-grid">
             <div class="novelty-card">
+                 
                 <img src="img/guarana.png" alt="Refrigerante Guaraná">
                 <h3>Refrigerante Guaraná Antarctica Garrafa 2L</h3>
-                <p class="price">R$8,59</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$8,59</p> 
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">                
                 <img src="img/coca-cola.png" alt="Refrigerante Coca-Cola">
                 <h3>Refrigerante Coca-Cola Garrafa 2L</h3>
-                <p class="price">R$10,99</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$10,99</p> 
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">                
                 <img src="img/crystal.png" alt="Água Mineral Crystal">
                 <h3>Água Mineral Crystal com Gás 1.5L</h3>
-                <p class="price">R$3,29</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$3,29</p>  
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">                 
                 <img src="img/suco-kapo.png" alt="Suco Kapo Uva">
                 <h3>Suco Kapo Uva 200ml</h3>
-                <p class="price">R$2,49</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$2,49</p> 
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">                
                 <img src="img/coca-zero.png" alt="Refrigerante Coca-Cola Zero">
                 <h3>Refrigerante Coca-Cola Zero 350ml</h3>
                 <p class="price">R$4,90</p>
-                <button class="add-to-cart">Adicionar</button>
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">                 
                 <img src="img/brahma.png" alt="Cerveja Brahma">
                 <h3>Cerveja Brahma Duplo Malte Lata 350ml</h3>
-                <p class="price">R$3,99</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$3,99</p> 
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">            
                 <img src="img/budweiser.png" alt="Cerveja Budweiser">
                 <h3>Cerveja Budweiser American Lager Lata 269ml</h3>
-                <p class="price">R$3,19</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$3,19</p>  
             </div>
-            <div class="novelty-card">
+            <div class="novelty-card">             
                 <img src="img/heineken.png" alt="Cerveja Heineken">
                 <h3>Cerveja Heineken Long Neck</h3>
-                <p class="price">R$4,49</p>
-                <button class="add-to-cart">Adicionar</button>
+                <p class="price">R$4,49</p> 
             </div>
         </div>
     </div>
     <script>
         document.getElementById("backArrow").addEventListener("click", function () {
             window.location.href = "index.html";
+        });
+
+                // Função para alternar o estado do coração
+        const hearts = document.querySelectorAll('.heart');
+        hearts.forEach(heart => {
+            heart.addEventListener('click', () => {
+                heart.classList.toggle('liked');
+            });
         });
     </script>
 </body>
