--- a/promocoes.html
+++ b/promocoes.html
@@ -20,43 +20,43 @@
                 <span class="logo-text">Mini Mercado<br><strong>Girassol</strong></span>
             </div>
             <div class="header-links">
-                <a href="#">Novidades</a>
+                <a href="novidades.html">Novidades</a>
                 <a href="#">Contato</a>
-                <a href="#" class="categories">Todas Categorias</a>
+                <a href="index.html" class="categories">Todas Categorias</a>
             </div>
         </div>
     </header>
 
+    <div class="container center-content">
+        <h1 class="centered-text">Promoções Imperdíveis</h1>
+    </div>    
+
     <div class="container">
-        <h1>Promoções Imperdíveis</h1>
         <div class="promotions-grid">
             <div class="promotion-card">
                 <img src="img/apple.png" alt="Maçã">
                 <h3>Maçã Gala 1kg</h3>
                 <p class="old-price">De R$7,99</p>
                 <p class="price">Por R$5,99</p>
-                <button class="add-to-cart">Adicionar</button>
             </div>
             <div class="promotion-card">
                 <img src="img/banana.png" alt="Banana">
                 <h3>Banana Prata 1kg</h3>
                 <p class="old-price">De R$6,50</p>
                 <p class="price">Por R$4,50</p>
-                <button class="add-to-cart">Adicionar</button>
             </div>
             <div class="promotion-card">
                 <img src="img/carrot.png" alt="Cenoura">
                 <h3>Cenoura 1kg</h3>
                 <p class="old-price">De R$5,00</p>
                 <p class="price">Por R$3,50</p>
-                <button class="add-to-cart">Adicionar</button>
             </div>
             <div class="promotion-card">
                 <img src="img/orange.png" alt="Laranja">
                 <h3>Laranja Pêra 1kg</h3>
                 <p class="old-price">De R$4,99</p>
                 <p class="price">Por R$3,99</p>
-                <button class="add-to-cart">Adicionar</button>
+ 
             </div>
         </div>
     </div>
