--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="Pesquisar...">
-                <button><img src="img/search-icon.png" alt="Buscar"></button>
+                <button class="header-btn"><img src="img/search-icon.png" alt="Buscar"></button>
             </div>
             <div class="header-buttons">
-                <a href="promocoes.html"><button class="header-btn">Promoções</button></a>
-                <a href="novidades.html"><button class="header-btn">Novidades</button></a>
+                <a href="promocoes.html" class="header-btn">Promoções</a>
+                <a href="novidades.html" class="header-btn">Novidades</a>
             </div>
             <div class="user-login">
-                <button id="loginButton" class="header-btn">Entrar</button>
-                <button><img src="img/login-icon.png" alt="Buscar"></button>
+                <a href="login.html" class="header-btn">
+                    Entrar <img src="img/login-icon.png" alt="Login">
+                </a>
             </div>
+        </div>
         </div>
         <nav class="nav-menu">
             <a href="#">Categorias</a>
