--- a/favoritos.html
+++ b/favoritos.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Girassol Mini Mercado">
     <title>Novidades - Girassol Mini Mercado</title>
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="novidades.css">
+    <link rel="stylesheet" href="favoritos.css">
 </head>
 <body>
     <!-- Header -->
@@ -21,16 +21,14 @@
             </div>
             <div class="header-links">
                 <a href="promocoes.html">Promoções</a>
-                <a href="favoritos.html" class="header-btn">Favoritos</a>
                 <a href="#">Contato</a>
                 <a href="index.html" class="categories">Todas Categorias</a>
-                
             </div>
         </div>
     </header>
 
     <div class="container center-content">
-        <h1 class="centered-text">Novidades Fresquinhas</h1>
+        <h1 class="centered-text">Produtos Favoritados</h1>
     </div>    
 
     <div class="container">
