--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="header-buttons">
                 <a href="promocoes.html" class="header-btn">Promoções</a>
                 <a href="novidades.html" class="header-btn">Novidades</a>
+                <a href="favoritos.html" class="header-btn">Favoritos</a>
             </div>
             <div class="user-login">
                 <a href="login.html" class="header-btn">
@@ -58,8 +59,10 @@
     </section>
 
     <!-- Produtos -->
-    <main>
+    <div class="container center-content">
         <h1 class="product-title">Promoções!</h1>
+    </div>   
+    <main>
         <div class="product-grid">
             <button class="prev-btn">❮</button>
             <div class="product-card">
