--- a/promocoes.html
+++ b/promocoes.html
@@ -21,6 +21,7 @@
             </div>
             <div class="header-links">
                 <a href="novidades.html">Novidades</a>
+                <a href="favoritos.html" class="header-btn">Favoritos</a>
                 <a href="#">Contato</a>
                 <a href="index.html" class="categories">Todas Categorias</a>
             </div>
